Change History
--------------

This file contains a list of all changes starting after the release of
sox-11gamma.

sox-13.0.1
----------

  File formats:

  o Added support for ADPCM-encoded PRC files, based on Danny Smith's
    rec2wav and sndcmp.
  o Added AMR-WB format.  (robs)
  o Added M3U playlist format [FR# 1667341].  (robs)
  o Added libao support.  (Reuben Thomas)

  Effects:

  o Added soft-knee companding.  (robs)
  o Show (with --octave) compand transfer function.  (robs)
  o Allow e.g. "vol 6dB" (as well as "vol 6 dB").  (robs)
  o Changed deemph to be a true biquad for better accuracy.  (robs)
  o Add option to silence effect to leave periods of silence
    in and only strip out extra silence.   Mark Schreiber

  Other new features:

  o Show (with -S) if clipping is occurring.  (robs)
  o Added internet input file support (needs wget).  (robs)
  o Made it possible to build without sound drivers.  (Reuben Thomas)

  Bug fixes:

  o Fix (m)compand transfer function non-linearities; fix compand
    drain volume.  (robs)
  o Fix crash with pan effect.  (robs)
  o Add missing RM define to Makefiles so installs work.
   (Bug# 1666599) (cbagwell)
  o Fix I/O performance regression in 13.0.0.  (Reuben Thomas)

  Internal improvements:

  o Renamed libst to libsox for name recongition and to avoid
    duplications with other existing libst libraries. (Reuben Thomas)
  o Got rid of several hundred compiler warnings.  (robs)
  o Added basic performance testing of I/O.  (Reuben Thomas)

sox-13.0.0
----------

  File formats:

  o Support for .caf, .paf, .fap, .nist, .w64, .nist, Matlab 4.2/5.0
    (Octave 2.0/2.1), .pvf, .sds, .sd2 and .xi file formats via libsndfile.
    If available, libsndfile can also be used to handle all the other file
    formats it understands.  (Reuben Thomas)
  o Add FLAC support (robs@users.sf.net)
  o Support Maxis's XA format. (Dwayne C. Litzenberger)
  o Add support for 24-bit PCM raw, wav (WAVE_FORMAT_EXTENSIBLE) [FR# 801015],