@@ -14,6 +14,7 @@ sox-13.0.1
   o Added AMR-WB format.  (robs)
   o Added M3U playlist format [FR# 1667341].  (robs)
   o Added libao support.  (Reuben Thomas)
+  o Added read-only ffmpeg support.  (Reuben Thomas)
 
   Effects:
 
